[package]
name = "katago"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
zip = "0.6.6"